@@ -1,5 +1,9 @@
 2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>
 
+	* src/services/server/ConnectedAdapter.cpp, src/services/server/ConnectedAdapter.h, src/services/server/IServerAdapter.h, src/services/server/NonConnectedAdapter.cpp, src/services/server/NonConnectedAdapter.h, src/services/server/ServerService.cpp, src/services/server/ServerService.h: added a delete command which will delete entities from the world
+
+2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>
+
 	* src/components/ogre/widgets/Bootstrap.lua: added loading of the admin control
 
 2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>
